# noise

./: .gitignore  Cargo.toml
benches/: messages.rs  network.rs
examples/: codec.rs  futures.rs  messages.rs  noise.rs  noise_futures.rs  pipelined_server.rs  simple.rs  test.rs
src/: lib.rs  main.rs  noise.rs  noise_codec.rs  noise_main.rs  sodium_wrapper.rs  wrapper.rs
tests/: client_server.rs  tests.rs
