[package]
name = "noise"
version = "0.1.0"
authors = ["Pavel Mukhanov <mukhanovpv@gmail.com>"]

[features]
default = []
nightly = ["blake2-rfc/simd_opt", "chacha20-poly1305-aead/simd_opt"]
ring-resolver = ["ring"]
ring-accelerated = ["ring", "ring-resolver"]
vector-tests = []

[dependencies]
snow = { version = "0.1.8-preview", path = "../snow" }
arrayvec = "^0.3"
error-chain = "^0.11"
rust-crypto = "^0.2"
byteorder = "^1.1"
rand = "^0.3"
static_slice = "0.0.3"
blake2-rfc = "^0.2"
chacha20-poly1305-aead = "^0.1"
ring = { version = "0.13.0-alpha", optional = true }
futures = "0.1.21"
tokio = "0.1.5"
tokio-core = "0.1.17"
tokio-io = "0.1.6"
clap = "2.31.2"
lazy_static = "1.0.0"
bytes = "0.4.6"


[dev-dependencies]
clap = "^2.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
hex = "^0.2"

